--- a/style.css
+++ b/style.css
@@ -76,6 +76,10 @@ strong {
     font-size: 1em;
     color: #808080;
 }
+#filtre {
+    display: flex;
+    justify-content: space-around;
+}
 /* flex avec space evenly et wrap pour effet grille */
 #image {
     display: flex;
@@ -101,4 +105,26 @@ footer {
 /* id pour respecter la difference de font size */
 #petit {
     font-size: 0.8em;
+}
+/* break point tablettes */
+/* @media (min-width: 768px) { ... } */
+@media (min-width:1920px) {
+
+    /* ajout marge gauche pour alignement avec le bloc image */
+    main p,
+    #lorem {
+        margin-left: 2.5%;
+    }
+
+    /* petite marge bottom pour "aérer" un peu */
+    #lorem {
+        margin-bottom: 3%;
+    }
+
+    /*je redimensione les images pour qu'elles soient carrées(height) et width de 30% pour en avoir 3 par ligne */
+    #image img {
+        width: 30%;
+        height: 552px;
+        margin-bottom: 2%;
+    }
 }
